2004-02-08  Karl Heinz Kremer <khk@khk.net>
	* backend/epson*.[ch]: Reformat source code to get rid of different coding styles
	  used over the years (and by different authors). 

2004-02-08  Frank Zago  <fzago at austin dot rr dot com>
	* README.windows: added info about USB scanners.

	* backend/teco1.c backend/teco1.conf backend/teco1.h
	  doc/sane-teco1.man doc/descriptions/teco1.desc: added new
	  scanner Relisys RELI 4816, marked Relisys AVEC 2412 as tested.

2004-02-08  Oliver Rauch <oliver.rauch@rauch-domain.de>
	* backend/umax: bugfix for DOR mode, sane-umax-build-43
	* doc/umax/umax.CHANGES updated

2004-02-07  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.h, backend/epson_usb.h: Increase timeout for lamp warmup
	  from 60 to 120 seconds

2004-02-07  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c: cleaned up debug code
	* backend/mustek_pp_decl.h, backend/mustek_pp_drivers.h: bumped
	  version number.
	* backend/mustek_pp.conf: fixed mistakes in examples

2004-02-07  Henning Meier-Geinitz <henning@meier-geinitz.de>
	
	* doc/descriptions/unsupported.desc: Added Genius Colorpage Vivid
	  1200EX and Mustek Paragon 800 II EP.

2004-02-04  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_usb.c: Fixed inconsistent error message (patch from 
	  Mattias Ellert <mattias.ellert@tsl.uu.se>).

2004-02-01  Gerhard Jaeger <gerhard@gjaeger.de>
	* sanei/sanei_thread.c: added Mattias Ellerts' patch to make
	  sanei_thread_kill work on MacOSX.

2004-02-01 Karl Heinz Kremer <khk@khk.net>

	* backend/epson.c: Added D7 function level as copy of D1 for CX-6400
	* backend/epson_usb.c: Added IDs for CX-6400 and Perfection 4870

2004-02-01 Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c: Remove non-working resolutions
	  for Epson Perfection 1670
	* doc/descriptions/snapscan.desc: Add Guillemot Maxi A4 36 bit

2004-01-31  Matthew Duggan <stauff1@users.sourceforge.net>
