@@ -2,6 +2,10 @@
 # Panasonic / Matsushita scanners
 
 scsi "K.M.E.  " "KV-SS25A        "
+scsi "K.M.E.  " "KV-SS55EX       "
+scsi "K.M.E.  " "KV-S2025C       "
+scsi "K.M.E.  " "KV-S2045C       "
+scsi "K.M.E.  " "KV-S2065L       "
 
 # These scanners are untested. 
 # If you have one:
@@ -13,7 +17,6 @@ scsi "K.M.E.  " "KV-SS25A        "
 #scsi "K.M.E.  " "KV-SS50         "
 #scsi "K.M.E.  " "KV-SS55         "
 #scsi "K.M.E.  " "KV-SS50EX       "
-#scsi "K.M.E.  " "KV-SS55EX       "
 #scsi "K.M.E.  " "KV-SS850        "
 #scsi "K.M.E.  " "KV-SS855        "
 
